GRAD2-2639: initial implementation is done.
GRAD2-2639: initial implementation is done.